[package]
name = "sia"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
lazy_static = "1.4"
rgb = "0.8.50"
quick-xml = "0.37.5"
roxmltree = "0.20.0"
usvg = "0.45.1"
svg = "0.18.0"
