[package]
name = "sia"
version = "1.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
lazy_static = "1.4"
rgb = "0.8.50"
quick-xml = "0.37.5"
roxmltree = "0.20.0"
usvg = "0.45.1"
svg = "0.18.0"
syntect = "5.2.0"
file-format = { version = "0.27.0", features = ["reader"] }
anyhow = "1.0.98"
resvg = "0.45.1"
tiny-skia = "0.11.4"
tiny-skia-path = "0.11.4"
fontdue = { version = "0.9.3", features = ["rayon"] }
fs-err = "3.1.0"
two-face = { version = "0.4.3", features = ["syntect-default-onig"] }
